Added two stylesheets
Bootstrap and default

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
   <title>List Service</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
   <h1>List Service</h1>
