--- a/index.html
+++ b/index.html
@@ -2,22 +2,50 @@
 <html lang="en">
 
 <head>
+
 	<meta charset="utf-8">
 	<title>List Service</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
 
-	<!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="../assets/ico/favicon.png">
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
+	<!-- Fav and touch icons -->
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+	<link rel="shortcut icon" href="../assets/ico/favicon.png">
 
 </head>
 
 <body>
+
+	<div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">Project name</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div> <!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+
+
   <h1>List Service</h1>
   
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam velit nisl, pharetra eu malesuada vitae, faucibus at eros. Vestibulum sit amet turpis in enim tempus pulvinar sit amet in lacus. Phasellus facilisis gravida sagittis. Ut ut porta nisl. Mauris lectus enim, adipiscing id adipiscing vitae, suscipit lacinia neque. Suspendisse dictum rutrum lectus, non varius arcu sollicitudin pellentesque. Suspendisse scelerisque, dolor vel euismod tincidunt, odio lacus tristique sapien, eu lobortis metus erat sed ante. Aliquam massa sem, vulputate ut varius at, luctus hendrerit ante. Pellentesque ut nunc orci, at dictum nibh. Suspendisse purus neque, sollicitudin eu tristique sit amet, interdum in risus. Aliquam molestie, leo ut tempor scelerisque, orci orci sagittis ligula, ac laoreet massa eros in urna. Aliquam laoreet faucibus lorem sed euismod. Phasellus vehicula pulvinar orci eu bibendum. Mauris pretium porta diam, at laoreet urna semper eget.</p>
