--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 <!-- Scripts -->
 <script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"></script>
 </script>
 
 </html>
