--- a/index.html
+++ b/index.html
@@ -44,13 +44,23 @@
       </div>
     </div>
 
+	<div class="container-fluid">
+		<div class="row-fluid">
+			<div class="span2">
 
-    <div class="container">
-    	
-		<h1>List Service</h1>
-  
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam velit nisl, pharetra eu malesuada vitae, faucibus at eros. Vestibulum sit amet turpis in enim tempus pulvinar sit amet in lacus. Phasellus facilisis gravida sagittis. Ut ut porta nisl. Mauris lectus enim, adipiscing id adipiscing vitae, suscipit lacinia neque. Suspendisse dictum rutrum lectus, non varius arcu sollicitudin pellentesque. Suspendisse scelerisque, dolor vel euismod tincidunt, odio lacus tristique sapien, eu lobortis metus erat sed ante. Aliquam massa sem, vulputate ut varius at, luctus hendrerit ante. Pellentesque ut nunc orci, at dictum nibh. Suspendisse purus neque, sollicitudin eu tristique sit amet, interdum in risus. Aliquam molestie, leo ut tempor scelerisque, orci orci sagittis ligula, ac laoreet massa eros in urna. Aliquam laoreet faucibus lorem sed euismod. Phasellus vehicula pulvinar orci eu bibendum. Mauris pretium porta diam, at laoreet urna semper eget.</p>
+      			<!--Sidebar content-->
+      			<h1>Sidebar</h1>
+      			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
+			</div>
+			<div class="span10">
+
+				<!--Body content-->
+				<h1>Body</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			</div>
+		</div>
 	</div>
 
 </body>
