--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
           <a class="brand" href="#">ListService</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li class="active"><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div> <!--/.nav-collapse -->
@@ -44,23 +44,13 @@
       </div>
     </div>
 
-	<div class="container-fluid">
-		<div class="row-fluid">
-			<div class="span2">
 
-      			<!--Sidebar content-->
-      			<h1>Sidebar</h1>
-      			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="container">
+    	
+		<h1>About</h1>
+  		<p>This is a website that will make managing email subscriptions for clubs and activities for Columbia University students.</p>
+		<p>This page was creted during DevFest 2013 by Gabriel Blanco, Ben Caine, Daniel Newman, Ved Tanavde, and Polina Viro.</p>
 
-			</div>
-			<div class="span10">
-
-				<!--Body content-->
-				<h1>Body</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-			</div>
-		</div>
 	</div>
 
 </body>
