--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 	<title>List Service</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap-responsive.min.css">
 	<link rel="stylesheet" href="css/main.css">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -44,6 +45,8 @@
       </div>
     </div>
 
+    <div id="wrap">
+
 	<div class="container-fluid">
 		<div class="row-fluid">
 			<div class="span2">
@@ -63,13 +66,23 @@
 		</div>
 	</div>
 
-</body>
 
-<!-- Scripts -->
-<script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"></script>
-</script>
+	<div id="push"></div>
+	</div>
+
+	<div id="footer">
+		<div class="container">
+			<p class="muted credit">Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a> and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.</p>
+		</div>
+	</div>
+
+	<!-- Scripts -->
+	<script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"></script>
+	</script>
+
+</body>
 
 </html>
