Removed more unnecessary stuff

--- a/Getting-Started_Bootstrap.html
+++ b/Getting-Started_Bootstrap.html
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
   <link href="http://twitter.github.com/bootstrap/assets/css/docs.css" rel="stylesheet">
-  <link href="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -59,34 +58,28 @@
       </div>
     </div>
 
-
-
-
   <div class="container">
 
-    <!-- Docs nav
-    ================================================== -->
+    <!-- Side Nav -->
     <div class="row">
       <div class="span3 bs-docs-sidebar">
         <ul class="nav nav-list bs-docs-sidenav affix">
-          <li class=""><a href="http://twitter.github.com/bootstrap/getting-started.html#download-bootstrap"><i class="icon-chevron-right"></i> Download</a></li>
-          <li class=""><a href="http://twitter.github.com/bootstrap/getting-started.html#file-structure"><i class="icon-chevron-right"></i> File structure</a></li>
-          <li class="active"><a href="http://twitter.github.com/bootstrap/getting-started.html#contents"><i class="icon-chevron-right"></i> What's included</a></li>
-          <li class=""><a href="http://twitter.github.com/bootstrap/getting-started.html#html-template"><i class="icon-chevron-right"></i> HTML template</a></li>
-          <li class=""><a href="http://twitter.github.com/bootstrap/getting-started.html#examples"><i class="icon-chevron-right"></i> Examples</a></li>
-          <li><a href="http://twitter.github.com/bootstrap/getting-started.html#what-next"><i class="icon-chevron-right"></i> What next?</a></li>
+          <li class="active"><a href=""><i class="icon-chevron-right"></i> Link1 </a></li>
+          <li class=""><a href=""><i class="icon-chevron-right"></i> Link2 </a></li>
+          <li class=""><a href=""><i class="icon-chevron-right"></i> Link3 </a></li>
+          <li class=""><a href=""><i class="icon-chevron-right"></i> Link4 </a></li>
+          <li class=""><a href=""><i class="icon-chevron-right"></i> Link5 </a></li>
+          <li><a href=""><i class="icon-chevron-right"></i> Link6 </a></li>
         </ul>
       </div>
       <div class="span9">
 
-
-
-        <!-- Download
-        ================================================== -->
+        <!-- Main Div -->
         <section id="download-bootstrap">
           <div class="page-header">
             <h1>ListService</h1>
           </div>
+
           <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu purus eget turpis tincidunt iaculis nec ac elit. Nam nibh nibh, facilisis quis sagittis non, sollicitudin elementum nunc. Aliquam erat volutpat. In hac habitasse platea dictumst. Sed ultricies mi porta sem porttitor dapibus. Nam et urna at quam consequat iaculis ut nec tellus. Proin dictum risus at sem varius ac porta eros mollis. Nulla dignissim, lectus eu molestie vehicula, nisi ipsum consectetur justo, ac posuere ligula enim a elit. Curabitur quis nunc et metus hendrerit pharetra non eu lectus. Mauris erat libero, venenatis ac venenatis ut, volutpat vel libero. Sed odio tortor, tempor volutpat pretium ac, imperdiet eget lectus. In pellentesque nibh ac risus lobortis feugiat. Integer ut felis purus.
 
           </br> </br> Aliquam vehicula, enim sit amet auctor lacinia, risus eros adipiscing eros, non imperdiet velit libero a arcu. In leo nisl, commodo in faucibus id, convallis ac ipsum. Nullam sit amet dignissim dui. Sed tortor libero, ullamcorper quis tristique placerat, scelerisque vel ligula. In sem tellus, lobortis feugiat mattis at, condimentum eget dui. Etiam blandit felis a felis aliquam malesuada porttitor lectus ornare. Sed porta tincidunt lobortis. Sed suscipit dignissim lorem, vitae eleifend libero tristique vel. Proin vestibulum elit vitae metus semper id vehicula metus ornare. Nulla sem mi, vehicula vitae tristique vel, dignissim at mauris. Morbi posuere tellus a leo molestie laoreet ornare justo vulputate. Nullam faucibus nunc id risus tincidunt sed ultricies magna sagittis. Donec ullamcorper nibh nisl, id consequat tortor. Curabitur non quam tellus.
@@ -115,25 +108,14 @@
     </footer>
 
 
-
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 
     <script src="js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-<!--    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script> -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"></script>
-
-    <script type="text/javascript" src="./Getting-Started_Bootstrap_files/widgets.js"></script>
-<!--    <script src="./Getting-Started_Bootstrap_files/jquery.js"></script> -->
-
-    <script src="./Getting-Started_Bootstrap_files/bootstrap-affix.js"></script>
-
-    <script src="./Getting-Started_Bootstrap_files/holder.js"></script>
-    <script src="./Getting-Started_Bootstrap_files/prettify.js"></script>
-
-    <script src="./Getting-Started_Bootstrap_files/application.js"></script>
 
 
     <!-- Analytics
