--- a/Getting-Started_Bootstrap.html
+++ b/Getting-Started_Bootstrap.html
@@ -10,7 +10,7 @@
     <!-- Le styles -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-  <link href="http://twitter.github.com/bootstrap/assets/css/docs.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/docs.css">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -18,11 +18,11 @@
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="http://twitter.github.com/bootstrap/assets/ico/favicon.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/lS_144.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/lS_114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/lS_72.png">
+    <link rel="apple-touch-icon" href="img/lS_144.png">
+    <link rel="shortcut icon" href="img/favicon.png">
 
     <script type="text/javascript" async="" id="gauges-tracker" data-site-id="4f0dc9fef5a1f55508000013" src="./Getting-Started_Bootstrap_files/track.js"></script><script type="text/javascript" async="" src="./Getting-Started_Bootstrap_files/ga.js"></script><script type="text/javascript">
       var _gaq = _gaq || [];
@@ -133,7 +133,5 @@
         s.parentNode.insertBefore(t, s);
       })();
     </script>
-
-  
 
 </body></html>
