--- a/Getting-Started_Bootstrap.html
+++ b/Getting-Started_Bootstrap.html
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="img/lS_114.png">
     <link rel="apple-touch-icon" sizes="72x72" href="img/lS_72.png">
     <link rel="apple-touch-icon" href="img/lS_144.png">
-    <link rel="shortcut icon" href="img/favicon.png">
+    <link rel="shortcut icon" href="img/favicon.ico">
 
     <script type="text/javascript" async="" id="gauges-tracker" data-site-id="4f0dc9fef5a1f55508000013" src="./Getting-Started_Bootstrap_files/track.js"></script><script type="text/javascript" async="" src="./Getting-Started_Bootstrap_files/ga.js"></script><script type="text/javascript">
       var _gaq = _gaq || [];
