--- a/index.html
+++ b/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- saved from url=(0056)http://twitter.github.com/bootstrap/getting-started.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <title>Getting · Bootstrap</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<head>
+    <!-- Le styles -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+  <link rel="stylesheet" href="css/docs.css">
 
-	<meta charset="utf-8">
-	<title>List Service</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-	<link rel="stylesheet" href="css/main.css">
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-	<!-- Fav and touch icons -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-	<link rel="shortcut icon" href="../assets/ico/favicon.png">
+    <!-- Le fav and touch icons -->
+    <link rel="apple-touch-icon" sizes="144x144" href="img/lS_144.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/lS_114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/lS_72.png">
+    <link rel="apple-touch-icon" href="img/lS_144.png">
+    <link rel="shortcut icon" href="img/favicon.ico">
 
-</head>
+    <script type="text/javascript" async="" id="gauges-tracker" data-site-id="4f0dc9fef5a1f55508000013" src="./Getting-Started_Bootstrap_files/track.js"></script><script type="text/javascript" async="" src="./Getting-Started_Bootstrap_files/ga.js"></script><script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-146052-10']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+  <style type="text/css"></style><style type="text/css">.holderjs-fluid {font-size:16px;font-weight:bold;text-align:center;font-family:sans-serif;border-collapse:collapse;border:0;vertical-align:middle;margin:0}</style><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script></head>
 
-<body>
+  <body data-spy="scroll" data-target=".bs-docs-sidebar" class=" hasGoogleVoiceExt">
 
-	<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -36,41 +49,89 @@
           <a class="brand" href="#">ListService</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </div> <!--/.nav-collapse -->
         </div>
       </div>
     </div>
 
-    <div id="wrap">
+  <div class="container">
 
-	<div class="container-fluid">
-		<div class="row-fluid">
-			<div class="span2">
+    <!-- Side Nav -->
+    <div class="row">
+      <div class="span3 bs-docs-sidebar">
+        <ul class="nav nav-list bs-docs-sidenav affix">
+          <li class="active"><a href=""><i class="icon-chevron-right"></i> Link1 </a></li>
+          <li class=""><a href=""><i class="icon-chevron-right"></i> Link2 </a></li>
+          <li class=""><a href=""><i class="icon-chevron-right"></i> Link3 </a></li>
+          <li class=""><a href=""><i class="icon-chevron-right"></i> Link4 </a></li>
+          <li class=""><a href=""><i class="icon-chevron-right"></i> Link5 </a></li>
+          <li><a href=""><i class="icon-chevron-right"></i> Link6 </a></li>
+        </ul>
+      </div>
+      <div class="span9">
 
-      			<!--Sidebar content-->
-      			<h1>Sidebar</h1>
-      			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <!-- Main Div -->
+        <section id="download-bootstrap">
+          <div class="page-header">
+            <h1>ListService</h1>
+          </div>
 
-			</div>
-			<div class="span10">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu purus eget turpis tincidunt iaculis nec ac elit. Nam nibh nibh, facilisis quis sagittis non, sollicitudin elementum nunc. Aliquam erat volutpat. In hac habitasse platea dictumst. Sed ultricies mi porta sem porttitor dapibus. Nam et urna at quam consequat iaculis ut nec tellus. Proin dictum risus at sem varius ac porta eros mollis. Nulla dignissim, lectus eu molestie vehicula, nisi ipsum consectetur justo, ac posuere ligula enim a elit. Curabitur quis nunc et metus hendrerit pharetra non eu lectus. Mauris erat libero, venenatis ac venenatis ut, volutpat vel libero. Sed odio tortor, tempor volutpat pretium ac, imperdiet eget lectus. In pellentesque nibh ac risus lobortis feugiat. Integer ut felis purus.
 
-				<!--Body content-->
-				<h1>Body</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </br> </br> Aliquam vehicula, enim sit amet auctor lacinia, risus eros adipiscing eros, non imperdiet velit libero a arcu. In leo nisl, commodo in faucibus id, convallis ac ipsum. Nullam sit amet dignissim dui. Sed tortor libero, ullamcorper quis tristique placerat, scelerisque vel ligula. In sem tellus, lobortis feugiat mattis at, condimentum eget dui. Etiam blandit felis a felis aliquam malesuada porttitor lectus ornare. Sed porta tincidunt lobortis. Sed suscipit dignissim lorem, vitae eleifend libero tristique vel. Proin vestibulum elit vitae metus semper id vehicula metus ornare. Nulla sem mi, vehicula vitae tristique vel, dignissim at mauris. Morbi posuere tellus a leo molestie laoreet ornare justo vulputate. Nullam faucibus nunc id risus tincidunt sed ultricies magna sagittis. Donec ullamcorper nibh nisl, id consequat tortor. Curabitur non quam tellus.
 
-			</div>
-		</div>
-	</div>
+          </br> </br>Phasellus vitae sem at nisi tristique tincidunt id nec urna. In lorem urna, pretium vitae varius ut, porta vel lectus. Suspendisse eget dolor nunc, quis pellentesque purus. Suspendisse tincidunt eleifend est in ultrices. Fusce id vehicula dolor. Nunc bibendum tempor ultrices. Praesent ac nisi non libero tincidunt volutpat hendrerit non massa.
 
-	<!-- Scripts -->
-	<script src="js/bootstrap.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"></script>
+          </br> </br>Morbi a lacus quam, non scelerisque turpis. Quisque dui massa, hendrerit id aliquet eget, accumsan sed enim. Vivamus enim urna, scelerisque vitae convallis eget, placerat non ipsum. Donec erat eros, fermentum id bibendum vel, viverra in ante. Nulla facilisi. Vestibulum molestie, neque vel rutrum venenatis, lectus felis adipiscing turpis, non volutpat urna dolor a ipsum. Maecenas mauris sapien, dictum non adipiscing eu, viverra eget augue. Cras porttitor consectetur dui.
 
-</body>
+          </br> </br>Quisque vitae volutpat metus. Etiam odio massa, porttitor sed viverra vitae, commodo nec nunc. Aliquam rhoncus pretium ligula sit amet tincidunt. Maecenas accumsan felis nec neque volutpat porta. Proin et porta lacus. Maecenas vulputate aliquam turpis, vitae interdum ipsum aliquam non. In hac habitasse platea dictumst. Suspendisse in turpis at nisi sodales gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque consequat congue erat, vitae ultricies elit placerat eget. Nulla et risus lectus.</p>
 
-</html>
+          </div>
+        </section>
+
+    </div>
+
+  </div>
+
+
+
+    <!-- Footer
+    ================================================== -->
+    <footer class="footer">
+      <div class="container">
+        <p>Designed by Gabe and Polina</p>
+      </div>
+    </footer>
+
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+
+    <script src="js/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"></script>
+
+
+    <!-- Analytics
+    ================================================== -->
+    <script>
+      var _gauges = _gauges || [];
+      (function() {
+        var t   = document.createElement('script');
+        t.type  = 'text/javascript';
+        t.async = true;
+        t.id    = 'gauges-tracker';
+        t.setAttribute('data-site-id', '4f0dc9fef5a1f55508000013');
+        t.src = '//secure.gaug.es/track.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(t, s);
+      })();
+    </script>
+
+</body></html>
