Added .js file and TODO

--- a/index.html
+++ b/index.html
@@ -112,15 +112,6 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="http://code.jquery.com/jquery-1.9.0.js"></script>
 	<script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
-	<script>
-		$( "#subbed" ).accordion({
-			collapsible : true,
-			heightStyle: "content"
-		});
-		$("#notSubbed").accordion({
-			collapsible : true,
-			heightStyle: "content"
-		});
-	</script>
+	<script src="js/main.js"></script>
 
 </html>
