Cleaned up both index and index_GS (index_GS better I think)

--- a/index_GS.html
+++ b/index_GS.html
@@ -11,7 +11,9 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
   <link rel="stylesheet" href="css/docs.css">
-  <link rel="stylesheet" href="css/our.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css">
+
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -59,10 +61,70 @@
       </div>
     </div>
 
+  <div class="container-fluid">
+    <div class="row-fluid">
+      <div class="span4 indScroll">
+        <h2>Subscribed</h2>
+        <div id="subbed">
+            <h4>Colloquium</h4>
+          <div>
+            <p>Computer Science colloquium announcements</p>
+          </div>
+            <h4>CU WiCS</h4>
+          <div>
+            <p>Columbia Women in Computer Science</p>
+          </div>
+            <h4>Movienight</h4>
+          <div>
+            <p>Mailing list for the weekly SEAS Movie Night. No, this doesn't actually exist.</p>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="span8 indScroll">
+
+        <h2>Not Subscribed</h2>
+        <div id="notSubbed">
+            <h4>Activities Board at Columbia (ABC)</h4>
+          <div>
+            <p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+          </div>
+            <h4>After-Hours Tutoring</h4>
+          <div>
+            <p>After-Hours Tutoring tutors elementary and middle school children in math, science, English, history and reading at a local homeless shelter on 104th and Broadway.</p>
+          </div>
+            <h4>Alpha Chi Omega - Theta Psi Chapter (AXO)</h4>
+          <div>
+            <p>Alpha Chi Omega is a national panhellenic fraternity of Real. Strong. Women. We offer life-long sisterhood bonds, countless opportunities to give back to the community, incomparable leadership and networking opportunities, and so much more!</p>
+          </div>
+          <h4>America Reads</h4>
+          <div>
+            <p>America Reads is committed to improving elementary school students' literacy skills. CU students serve as tutors, encouraging students and aiming to bring up their reading levels through engaging, educational activities.</p>
+          </div>
+          <h4>American Society of Civil Engineers (ASCE)</h4>
+          <div>
+            <p>The Columbia University Chapter of the American Society of Civil Engineers is a pre-professional club dedicated to all students interested in Civil Engineering, Structural Engineering and Construction Management at Columbia University.</p>
+          </div>
+          <h4>Application Development Initiative</h4>
+          <div>
+            <p>The primary goal of the Application Development Initiative is to nurture student creativity and technological aptitude by creating a communal resource for developers of all talents and interests.</p>
+          </div>
+          <h4>Badminton</h4>
+          <div>
+            <p>We welcome badminton players of all levels! From new beginners to experienced pros, there's a place for you. We are comprised of (1) a general badminton club open to everyone and (2) a competition team that represents Columbia against other schools.</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
   <div class="container">
 
     <!-- Side Nav -->
-    <div class="row">
+<!--     <div class="row">
       <div class="span3 bs-docs-sidebar">
         <ul class="nav nav-list bs-docs-sidenav affix">
           <li class="active"><a href=""><i class="icon-chevron-right"></i> Link1 </a></li>
@@ -73,10 +135,10 @@
           <li><a href=""><i class="icon-chevron-right"></i> Link6 </a></li>
         </ul>
       </div>
-      <div class="span9">
+      <div class="span9"> -->
 
         <!-- Main Div -->
-        <section id="download-bootstrap">
+<!--         <section id="download-bootstrap">
           <div class="page-header">
             <h1>ListService</h1>
           </div>
@@ -93,7 +155,7 @@
 
           </div>
         </section>
-
+ -->
     </div>
 
   </div>
@@ -113,10 +175,11 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 
-    <script src="js/bootstrap.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
+  <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
+  <script src="js/main.js"></script>
+
 
 
     <!-- Analytics
