--- a/index_GS.html
+++ b/index_GS.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0056)http://twitter.github.com/bootstrap/getting-started.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
     <meta charset="utf-8">
     <title>List Service</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Le styles -->
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
   <link rel="stylesheet" href="css/docs.css">
@@ -15,19 +16,22 @@
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css">
 
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <!-- Le fav and touch icons -->
+    <!-- favicons and touch icons -->
     <link rel="apple-touch-icon" sizes="144x144" href="img/lS_144.png">
     <link rel="apple-touch-icon" sizes="114x114" href="img/lS_114.png">
     <link rel="apple-touch-icon" sizes="72x72" href="img/lS_72.png">
     <link rel="apple-touch-icon" href="img/lS_144.png">
     <link rel="shortcut icon" href="img/favicon.ico">
 
-    <script type="text/javascript" async="" id="gauges-tracker" data-site-id="4f0dc9fef5a1f55508000013" src="./Getting-Started_Bootstrap_files/track.js"></script><script type="text/javascript" async="" src="./Getting-Started_Bootstrap_files/ga.js"></script><script type="text/javascript">
+    <!-- Javascript stuff that Bootstraps stuffed in last minute, may or may not be useful-->
+    <script type="text/javascript" async="" id="gauges-tracker" data-site-id="4f0dc9fef5a1f55508000013" src="./Getting-Started_Bootstrap_files/track.js"></script>
+    <script type="text/javascript" async="" src="./Getting-Started_Bootstrap_files/ga.js"></script>
+    <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-146052-10']);
       _gaq.push(['_trackPageview']);
@@ -37,9 +41,13 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
-  <style type="text/css"></style><style type="text/css">.holderjs-fluid {font-size:16px;font-weight:bold;text-align:center;font-family:sans-serif;border-collapse:collapse;border:0;vertical-align:middle;margin:0}</style><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script></head>
+    <style type="text/css"></style>
+    <style type="text/css">.holderjs-fluid {font-size:16px;font-weight:bold;text-align:center;font-family:sans-serif;border-collapse:collapse;border:0;vertical-align:middle;margin:0}</style>
+    <script>window["_GOOG_TRANS_EXT_VER"] = "1";</script>
 
-  <body data-spy="scroll" data-target=".bs-docs-sidebar" class=" hasGoogleVoiceExt">
+</head>
+
+<body>
 
   <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -122,21 +130,15 @@
 
 </div>
 
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p>Designed by Gabe and Polina</p>
+    </div>
+  </footer>
 
 
-    <!-- Footer
-    ================================================== -->
-    <footer class="footer">
-      <div class="container">
-        <p>Designed by Gabe and Polina</p>
-      </div>
-    </footer>
-
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-
+  <!-- Javascript -->
   <script src="js/bootstrap.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
   <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
@@ -144,8 +146,7 @@
 
 
 
-    <!-- Analytics
-    ================================================== -->
+    <!-- Analytics (left in from BS, may or may not be useful)-->
     <script>
       var _gauges = _gauges || [];
       (function() {
