Moved scripts inside of the body
That's where they're supposed to go, must have been a little error

--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
 		</div>
 
 	</div>
-</body>
 
 <!-- Scripts -->
 
@@ -117,4 +116,4 @@
 	<script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
 	<script src="js/main.js"></script>
 
-</html>
+</body></html>
