Added dynamic list-popuation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css">
 
+
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -26,10 +27,6 @@
 </head>
 
 <body>
-
-	<!-- Modal -->
-
-	
 
 	<div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -54,22 +51,6 @@
 <!--     <div id="wrap"> -->
 
 	<div class="container-fluid">
-
-<a href="#myModal" role="button" class="btn" data-toggle="modal">Launch demo modal</a>
-<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Modal header</h3>
-  </div>
-  <div class="modal-body">
-    <p>One fine body…</p>
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    <button class="btn btn-primary">Save changes</button>
-  </div>
-</div>
-
 		<div class="row-fluid">
 			<div class="span4 indScroll">
 				<h2>Subscribed</h2>
@@ -94,49 +75,6 @@
 
 				<h2>Not Subscribed</h2>
 				<div id="notSubbed">
-  					<h4>Activities Board at Columbia (ABC)</h4>
-					<div>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
-					</div>
-  					<h4>After-Hours Tutoring</h4>
-					<div>
-						<p>After-Hours Tutoring tutors elementary and middle school children in math, science, English, history and reading at a local homeless shelter on 104th and Broadway.</p>
-					</div>
-  					<h4>Alpha Chi Omega - Theta Psi Chapter (AXO)</h4>
-					<div>
-						<p>Alpha Chi Omega is a national panhellenic fraternity of Real. Strong. Women. We offer life-long sisterhood bonds, countless opportunities to give back to the community, incomparable leadership and networking opportunities, and so much more!</p>
-					</div>
-					<h4>America Reads</h4>
-					<div>
-						<p>America Reads is committed to improving elementary school students' literacy skills. CU students serve as tutors, encouraging students and aiming to bring up their reading levels through engaging, educational activities.</p>
-					</div>
-					<h4>American Society of Civil Engineers (ASCE)</h4>
-					<div>
-						<p>The Columbia University Chapter of the American Society of Civil Engineers is a pre-professional club dedicated to all students interested in Civil Engineering, Structural Engineering and Construction Management at Columbia University.</p>
-					</div>
-					<h4>Application Development Initiative</h4>
-					<div>
-						<p>The primary goal of the Application Development Initiative is to nurture student creativity and technological aptitude by creating a communal resource for developers of all talents and interests.</p>
-					</div>
-					<h4>Badminton</h4>
-					<div>
-						<p>We welcome badminton players of all levels! From new beginners to experienced pros, there's a place for you. We are comprised of (1) a general badminton club open to everyone and (2) a competition team that represents Columbia against other schools.</p>
-					</div>
 				</div>
 
 			</div>
@@ -146,9 +84,10 @@
 
 <!-- Scripts -->
 
-	<script src="js/bootstrap.js"></script>
-	<script src="http://code.jquery.com/jquery-1.9.0.js"></script>
-	<script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
-	<script src="js/main.js"></script>
+	<script type="text/javascript" src="js/bootstrap.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.0.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
+
 
 </body></html>
