Minor style changes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 	<div class="container-fluid">
 		<div class="row-fluid">
-			<div class="span4 indScroll">
+			<div class="span5 indScroll">
 				<h2>Subscribed</h2>
 				<div id="subbed">
   					<h4>Colloquium</h4>
@@ -71,7 +71,7 @@
 			</div>
 
 
-			<div class="span8 indScroll rightBar">
+			<div class="span5 offset1 indScroll rightBar">
 
 				<h2>Not Subscribed</h2>
 				<div id="notSubbed">
