Both lists dynamically populated now

--- a/index.html
+++ b/index.html
@@ -55,18 +55,7 @@
 			<div class="span5 indScroll">
 				<h2>Subscribed</h2>
 				<div id="subbed">
-  					<h4>Colloquium</h4>
-					<div>
-						<p>Computer Science colloquium announcements</p>
-					</div>
-  					<h4>CU WiCS</h4>
-					<div>
-						<p>Columbia Women in Computer Science</p>
-					</div>
-  					<h4>Movienight</h4>
-					<div>
-						<p>Mailing list for the weekly SEAS Movie Night. No, this doesn't actually exist.</p>
-					</div>
+  					<!--dynamically populated now-->
 				</div>
 			</div>
 
@@ -75,6 +64,7 @@
 
 				<h2>Not Subscribed</h2>
 				<div id="notSubbed">
+					<!--dynamically populated now-->
 				</div>
 
 			</div>
