Button style fixes & functionality

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	</div>
 
 	<div class="buttons-row">
-		<button class="btn btn-large btn-block btn-primary" type="button">Action!</button>
+		<button class="btn btn-large btn-block btn-primary" type="button" style="padding:15px" onclick="action()">Action!</button>
 	</div>
 
 <!-- Scripts -->
