Added email module

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 
 	<div id="fixScroll">
 		<div class="container-fluid">
+			
+			<div id="emailDialog" class="hide modal-body">
+            <p>Please enter your email:</p>
+            <input type="text" name="email" />
+            </div>
+
 			<div class="row-fluid">
 				<div class="span5">
 					<h2>Subscribed</h2>
@@ -85,7 +91,7 @@
 
 <!-- Scripts -->
 
-	<script type="text/javascript" src="js/bootstrap.js"></script>
+	<script type="text/javascript" src="js/bootstrap2.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.0.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
