--- a/index.html
+++ b/index.html
@@ -50,10 +50,16 @@
 
 	<div id="fixScroll">
 		<div class="container-fluid">
-			
+
 			<div id="emailDialog" class="hide modal-body">
             <p>Please enter your email:</p>
             <input type="text" name="email" />
+            </div>
+
+            <div id="actionDialog" class="hide modal-body">
+            <p>Check your email for confirmation requests!</p>
+            <p>Here are your changes:</p>
+            <ul></ul>
             </div>
 
 			<div class="row-fluid">
