Changed name of UNS

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<h2>Subscribed</h2>
 				</div>
 				<div class="span5 offset1">
-					<h2>Subscribed</h2>
+					<h2>Unsubscribed</h2>
 				</div>
 			</div>
 		</div>
