--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,12 @@
     <div class="container">
     	
 		<h1>Contact</h1>
-  		<p>There should be some way to contact us, right? Well, as of now, we haven't come up with the best way for that yet.</p>
+		<br>
+		<p>Please feel free to reach out with any inquiries!</p>
+		<br>
+  		<p>          Daniel Newman: dln2111@columbia.edu</p>
+  		<p>          Ved Tanavde: vat2117@columbia.edu</p>
+  		<p>          Polina Viro: pv2221@columbia.edu</p>
 
 	</div>
 
