--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
     <div class="container">
     	
 		<h1>About</h1>
-  		<p>This is a website that will simplify managing email subscriptions for clubs and activities at Columbia University.</p>
+  		<p>This is a website that will simplify managing listserv subscriptions for clubs and organizations at Columbia University.</p>
 		<p>This page was created during DevFest 2013 by Gabriel Blanco, Ben Caine, Daniel Newman, Ved Tanavde, and Polina Viro.</p>
 
 	</div>
