--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,9 @@
 		<br>
 		<p>Please feel free to reach out with any inquiries!</p>
 		<br>
-  		<p>          Daniel Newman: dln2111@columbia.edu</p>
-  		<p>          Ved Tanavde: vat2117@columbia.edu</p>
-  		<p>          Polina Viro: pv2221@columbia.edu</p>
+  		<p><t>Daniel Newman: dln2111@columbia.edu</t></p>
+  		<p><t>Ved Tanavde: vat2117@columbia.edu</t></p>
+  		<p><t>Polina Viro: pv2221@columbia.edu</t></p>
 
 	</div>
 
