--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,9 @@
 		<br>
 		<p>Please feel free to reach out with any questions or concerns!</p>
 		<br>
-  		<p>"            "Daniel Newman: dln2111@columbia.edu</p>
-  		<p>"            "Ved Tanavde: vat2117@columbia.edu</p>
-  		<p>"            "Polina Viro: pv2221@columbia.edu</p>
+  		<p>			Daniel Newman: dln2111@columbia.edu</p>
+  		<p>			Ved Tanavde: vat2117@columbia.edu</p>
+  		<p>			Polina Viro: pv2221@columbia.edu</p>
 
 	</div>
 
